examples/test/testpolicy3375.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3375
  namespace: namespace421
spec:
  podSelector:
    matchLabels:
      key10: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value49
          key6: value27
          key32: value46
      podSelector:
        matchLabels:
          key20: value35
          key42: value33
          key44: value18
